# martian

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/core/: Colony.hpp  EventSystem.cpp  EventSystem.hpp  Policies.hpp  Policy.hpp  PolicyEngine.cpp  PolicyEngine.hpp  ResourceAllocator.cpp  ResourceAllocator.hpp  SimulationEngine.cpp  SimulationEngine.hpp
src/ui/: Renderer.cpp  Renderer.hpp
tests/: CMakeLists.txt  test_policy.cpp  test_simulation.cpp
